--- a/.gitignore
+++ b/.gitignore
@@ -12382,3 +12382,5 @@ obj/Debug/Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.csproj.A
 .vs/Courage-under-Fire/FileContentIndex/ace7d8bc-9f8c-4e56-9381-6cdc5a50e01a.vsidx
 Library/ArtifactDB
 Library/ArtifactDB
+.vs/Courage-under-Fire/v17/fileList.bin
+Library/ArtifactDB
